Updated the code base

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,7 +87,7 @@
             <div class="d-flex gap-3 justify-content-center">
                 <a href="#ecosystem" class="btn btn-warning btn-lg">Explore Features</a>
                 <a href="dashboard/AgriHiveslink.html" class="btn btn-success btn-lg" >Launch
-                    Dashboard</button>
+                    Dashboard</a>
             </div>
         </div>
     </section>
