Update the logo

--- a/frontend/dashboard/Wallet.html
+++ b/frontend/dashboard/Wallet.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="wallet.css">
     <script src="scripts.js"></script>
+        <link rel="shortcut icon" href="../Logo.png" type="image/x-icon">
+
 
     </style>
 </head>
