--- a/frontend/dashboard/market.html
+++ b/frontend/dashboard/market.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="right.css">
     <link rel="stylesheet" href="market.css">
     <script src="scripts.js"></script>
+        <link rel="shortcut icon" href="../Logo.png" type="image/x-icon">
+
 
 </head>
     <!-- Close Button outside the sidebar -->
