--- a/frontend/dashboard/services.html
+++ b/frontend/dashboard/services.html
@@ -6,6 +6,8 @@
     <title>Service List (A-Z)</title>
     <script src="scripts.js"></script>
     <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
+
     <style>
         body {
             font-family: Arial, sans-serif;
