--- a/frontend/dashboard/staking.html
+++ b/frontend/dashboard/staking.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="wallet.css">
     <link rel="stylesheet" href="staking.css">
     <script src="scripts.js"></script>
+        <link rel="shortcut icon" href="../Logo.png" type="image/x-icon">
+
 
     </style>
 </head>
