--- a/frontend/dashboard/AgriHiveslink.html
+++ b/frontend/dashboard/AgriHiveslink.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="AgriHiveslink.css">
     <script src="scripts.js"></script>
+        <link rel="shortcut icon" href="../Logo.png" type="image/x-icon">
+
 </head>
     <!-- Close Button outside the sidebar -->
 <div class="sidebar_close">
