--- a/frontend/dashboard/P2P.html
+++ b/frontend/dashboard/P2P.html
@@ -12,6 +12,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts.js"></script>
+        <link rel="shortcut icon" href="../Logo.png" type="image/x-icon">
 
 </head>
 <style>
